// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header can back is false renders template without arrow back button 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-title-2"
  >
    <ForwardRef(SvgPalomaLogo)
      className="makeStyles-logo-4"
    />
    <span>
      Paloma Pay
    </span>
  </div>
</WithStyles(ForwardRef(Container))>
`;

exports[`Header can back is true renders template with arrow back button 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-root-1"
>
  <ArrowBackIcon
    className="makeStyles-goBack-3"
    onClick={[MockFunction]}
  />
  <div
    className="makeStyles-title-2"
  >
    <ForwardRef(SvgPalomaLogo)
      className="makeStyles-logo-4"
    />
    <span>
      Paloma Pay
    </span>
  </div>
</WithStyles(ForwardRef(Container))>
`;
